  [package]
name = "peg-no-alloc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
fast-float = { git = "https://github.com/quartiq/fast-float-rust", branch = "lib-no-std", version = "0.2.0", default-features = false }
fchashmap = "0.1.3"
heapless = { version = "0.7.16", features = ["cas", "x86-sync-pool"] }
libc-print = "0.1.21"
libc_alloc = "1.0.4"
peg = { git = "https://github.com/stevefan1999-personal/rust-peg", branch = "patch-unstable-vectors", version = "0.8.1", default-features = false, features = ["unstable", "arrayvec"] }
static-alloc = "0.2.4"
vc-ltl = "5.0.5"
without-alloc = "0.2.2"

[profile.release]
incremental = true
lto = "thin"
#strip = "debuginfo"

[profile.min-size-release]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = "s"

[profile.release-strip]
inherits = "release"
strip = "symbols"

[profile.min-size-release-strip]
inherits = "min-size-release"
strip = "symbols"
